fix overflow x

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -610,3 +610,9 @@ article img {
     @apply border-accent cursor-pointer;
   }
 }
+
+@layer base {
+  html, body {
+    @apply overflow-x-hidden;
+  }
+}
